--- a/app/src/main/res/layout/activity_login_with_mpin.xml
+++ b/app/src/main/res/layout/activity_login_with_mpin.xml
@@ -9,116 +9,33 @@
     tools:context=".login.LoginWithMPinActivity">
 
     <TextView
+        android:id="@+id/labelEnter_mPin"
         android:text="@string/enter_mpin"
         android:textStyle="normal"
         style="@style/heading_text_style"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_80sdp"
-        app:layout_constraintStart_toStartOf="@id/clMPIN1"
+        app:layout_constraintStart_toStartOf="@id/mpin_view"
         android:layout_marginBottom="@dimen/_10sdp"
-        app:layout_constraintBottom_toTopOf="@id/clMPIN1"
+        app:layout_constraintBottom_toTopOf="@id/mpin_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-
-    <!--for Set New mPIN-->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clMPIN1"
-        android:layout_marginTop="@dimen/_120sdp"
-        android:layout_width="wrap_content"
+    <in.aabhasjindal.otptextview.OtpTextView
+        android:id="@+id/mpin_view"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:layout_constraintTop_toBottomOf="@id/labelEnter_mPin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
-
-        <!--edt1-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/il1"
-            style="@style/text_input_layout"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt1"
-                android:layout_width="wrap_content"
-                style="@style/editTextStyle"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:maxLength="1"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!--edt2-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/il2"
-            style="@style/text_input_layout"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/il1"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt2"
-                android:layout_width="wrap_content"
-                style="@style/editTextStyle"
-                android:textAlignment="center"
-                android:maxLength="1"
-                android:layout_marginStart="@dimen/_3sdp"
-                android:inputType="number"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!--edt3-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/il3"
-            style="@style/text_input_layout"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/il2"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt3"
-                android:layout_width="wrap_content"
-                style="@style/editTextStyle"
-                android:textAlignment="center"
-                android:layout_marginStart="@dimen/_3sdp"
-                android:maxLength="1"
-                android:inputType="number"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <!--edt4-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/il4"
-            style="@style/text_input_layout"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/il3"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edt4"
-                android:layout_width="wrap_content"
-                style="@style/editTextStyle"
-                android:layout_marginStart="@dimen/_3sdp"
-                android:maxLength="1"
-                android:textAlignment="center"
-                android:inputType="number"
-                android:layout_height="wrap_content"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textBlue"
+        app:height="@dimen/_40sdp"
+        app:width="@dimen/_40sdp"
+        app:bar_enabled="true"
+        app:bar_height="@dimen/_2sdp"
+        app:length="4"
+        app:otp_text_size="@dimen/_24sdp"/>
 
     <TextView
         android:id="@+id/labelForgotPassword"
@@ -128,8 +45,8 @@
         android:text="@string/forgot_mpin"
         android:textColor="@color/black"
         android:textSize="@dimen/_12ssp"
-        app:layout_constraintEnd_toEndOf="@id/clMPIN1"
-        app:layout_constraintTop_toBottomOf="@id/clMPIN1" />
+        app:layout_constraintEnd_toEndOf="@id/mpin_view"
+        app:layout_constraintTop_toBottomOf="@id/mpin_view" />
 
 
 
