custom dialog box added and used in Login Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="turquoise">#1D9CA2</color>
     <color name="green">#69BE28</color>
     <color name="darkRed">#8B0000</color>
+    <color name="transparent">#00000000</color>
 
 
     <!--TextColors-->
