--- a/app/src/main/res/layout/activity_leads.xml
+++ b/app/src/main/res/layout/activity_leads.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="leadViewModel"
+            type="com.example.test.lead.LeadsViewModel" />
+
+    </data>
+
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
