--- a/app/src/main/res/layout/activity_leads.xml
+++ b/app/src/main/res/layout/activity_leads.xml
@@ -85,7 +85,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvLeadActivity"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_450sdp"
                     android:layout_marginTop="@dimen/_20sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
