--- a/app/src/main/res/layout/activity_leads.xml
+++ b/app/src/main/res/layout/activity_leads.xml
@@ -81,6 +81,14 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    android:id="@+id/leadSwipeRefresh"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_450sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/labelLeadName">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvLeadActivity"
@@ -96,6 +104,8 @@
                     android:orientation="vertical"
                     tools:listitem="@layout/item_lead_list" />
 
+
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
