--- a/app/src/main/res/layout/activity_new_lead_details.xml
+++ b/app/src/main/res/layout/activity_new_lead_details.xml
@@ -90,7 +90,7 @@
                         android:digits="1234567890"
                         android:maxLength="10"
                         android:hint="@string/enter_lead_mobile_number"
-                        android:inputType="number"
+                        android:inputType="phone"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent" />
 
