--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="green">#69BE28</color>
     <color name="darkRed">#8B0000</color>
     <color name="transparent">#00000000</color>
+    <color name="dark_grey">#63666A</color>
 
 
     <!--TextColors-->
