--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -38,6 +38,17 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="semi_mid_text_style">
+        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textColor">@color/textBlue</item>
+        <item name="android:textStyle">bold</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+
     <style name="viewBorderStyle">
         <item name="android:layout_height">@dimen/_2sdp</item>
         <item name="android:layout_width">match_parent</item>
