--- a/app/src/main/res/layout/activity_main_updated.xml
+++ b/app/src/main/res/layout/activity_main_updated.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,9 +12,7 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/MainConstraintStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,6 +73,7 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp"
                     android:textStyle="italic"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txtWelcomeUser"
                     tools:text="22nd Feb 2023, Wednesday" />
@@ -80,11 +81,11 @@
                 <TextView
                     android:id="@+id/labelCallScheduled"
                     style="@style/heading_text_style"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_40sdp"
                     android:text="@string/calls_scheduled_for_the_day"
                     android:textAlignment="center"
                     android:textColor="@color/dark_grey"
-                    android:textStyle="italic"
+                    android:textStyle="bold|italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txtDate" />
@@ -176,7 +177,7 @@
                     android:id="@+id/labelQueue"
                     style="@style/semi_mid_text_style"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_80sdp"
+                    android:layout_marginTop="@dimen/_60sdp"
                     android:text="@string/queue"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/clTotalCallScheduled" />
@@ -185,7 +186,7 @@
                     android:id="@+id/labelCompletedCalls"
                     style="@style/semi_mid_text_style"
                     android:layout_marginStart="@dimen/_50sdp"
-                    android:layout_marginTop="@dimen/_80sdp"
+                    android:layout_marginTop="@dimen/_60sdp"
                     android:text="@string/completed_calls"
                     app:layout_constraintEnd_toStartOf="@id/labelPendingCalls"
                     app:layout_constraintStart_toEndOf="@id/labelQueue"
@@ -195,7 +196,7 @@
                     android:id="@+id/labelPendingCalls"
                     style="@style/semi_mid_text_style"
                     android:layout_marginStart="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_80sdp"
+                    android:layout_marginTop="@dimen/_60sdp"
                     android:text="@string/pending_calls"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/labelCompletedCalls"
@@ -354,6 +355,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.516"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelRenewal" />
 
