DashBoardResponseModel added, UserResponseModel added , volley library added ,

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="darkRed">#8B0000</color>
     <color name="transparent">#00000000</color>
     <color name="dark_grey">#63666A</color>
+    <color name="skyBlue">#BED0E8</color>
 
 
     <!--TextColors-->
